# upstox-automated-trader

./: .env  .env.example  README.md  pyproject.toml  requirements.txt
data/: RELIANCE_5_combined.csv
scripts/: paper_trade.bat  scan_once.bat
src/: __init__.py  main.py
src/adapters/: scanners_adapter.py
src/cli/: paper_trade.py  scan_once.py
src/config/: config.example.json  loader.py  schema.json
src/core/: auth.py  broker.py  data_feed.py  execution.py  test_order.py
src/reports/: RELIANCE_5mins.csv  performance.py  writer.py
src/risk/: risk_manager.py
src/signals/: engine.py
src/ui/: index.html
src/utils/: logger.py
